# flowcoin

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  README.md  flowcoin.conf.example  whitepaper.txt
src/: CMakeLists.txt  config.cpp  config.h  flowcoin-cli.cpp  flowcoin-miner.cpp  flowcoin-tx.cpp  flowcoind.cpp  init.cpp  init.h  logging.cpp  logging.h  rest.cpp  rest.h  version.h
src/bench/: bench.cpp  bench.h  bench_chain.cpp  bench_crypto.cpp  bench_ed25519.cpp  bench_keccak.cpp  bench_main.cpp  bench_mempool.cpp  bench_model.cpp  bench_net.cpp  bench_script.cpp
src/chain/: CMakeLists.txt  blockindex.cpp  blockindex.h  blockstore.cpp  blockstore.h  chaindb.cpp  chaindb.h  chainstate.cpp  chainstate.h  modelstate.cpp  modelstate.h  txindex.cpp  txindex.h  utxo.cpp  utxo.h
src/common/: args.cpp  args.h  config_options.cpp  config_options.h  run_context.h  settings.cpp  settings.h  system.cpp  system.h
src/compat/: assumptions.h  byteswap.h  compat.h  cpuid.cpp  cpuid.h  glibcxx_sanity.cpp
src/consensus/: CMakeLists.txt  consensus_model.cpp  consensus_model.h  difficulty.cpp  difficulty.h  eval.cpp  eval.h  genesis.cpp  genesis.h  growth.cpp  growth.h  merkle.cpp  merkle.h  params.cpp  params.h  pow.cpp  pow.h  reward.cpp  reward.h  validation.cpp  validation.h
src/core/: CMakeLists.txt  hash.cpp  hash.h  serialize.h  time.cpp  time.h  types.h
src/crypto/: CMakeLists.txt  address.cpp  address.h  aes256.cpp  aes256.h  bech32.cpp  bech32.h  ed25519-donna-batchverify.h  ed25519-hash-custom.h  ed25519-hash.h  ed25519-randombytes.h  hd.cpp  hd.h  hmac_sha512.cpp  hmac_sha512.h  keys.cpp  keys.h  sign.cpp  sign.h  slip0010.cpp  slip0010.h
src/hash/: KeccakHash.h  bloom.cpp  bloom.h  config.h  keccak.cpp  keccak.h  merkle.cpp  merkle.h
src/index/: base.cpp  base.h  blockfilterindex.cpp  blockfilterindex.h  coinstatsindex.cpp  coinstatsindex.h  txindex.cpp  txindex.h
src/interfaces/: chain.cpp  chain.h  handler.cpp  handler.h  node.cpp  node.h  wallet.cpp  wallet.h
src/kernel/: chain_verifier.cpp  chain_verifier.h  chainparams.cpp  chainparams.h  coinstats.cpp  coinstats.h  context.cpp  context.h  disconnected_transactions.h  mempool_entry.h  notifications.cpp  notifications.h  validation.cpp  validation.h
src/libuv/: configure.ac  libuv-static.pc.in
src/mempool/: CMakeLists.txt  mempool.cpp  mempool.h  policy.cpp  policy.h
src/miner/: Makefile.am  backend.h  backend_cpu.cpp  backend_cpu.h  backend_cuda.cu  backend_cuda.h  backend_factory.cpp  backend_metal.h  backend_metal.mm  backend_opencl.cpp  backend_opencl.h  backend_vulkan.cpp  backend_vulkan.h  cgminer.c  cuda_miner.cu  cuda_miner.h  cuda_ops.cu  cuda_ops.h  driver-cpu.c  driver-stubs.c  flowcoin-miner  flowminer-cuda.cu  flowminer-opencl.cpp  flowminer.c  flowminer.cpp  hash_check.cpp  hash_check.h  keccak2.c  keccak2.h  keccak256d.cl  log.hpp  miner.cpp  miner.h  mining.c  mining.h  model.cpp  model.h  ocl_keccak.cl  ocl_miner.c  ocl_miner.h  (+7 more)
src/mining/: CMakeLists.txt  assembler.cpp  assembler.h  blocktemplate.cpp  blocktemplate.h  difficulty.cpp  difficulty.h  gpu_miner.cpp  gpu_miner.h  miner.cpp  miner.h  stratum.cpp  stratum.h  submitblock.cpp  submitblock.h  trainer.cpp  trainer.h
src/net/: CMakeLists.txt  addrman.cpp  addrman.h  banman.cpp  banman.h  messages.cpp  messages.h  net.cpp  net.h  netaddress.cpp  netaddress.h  netbase.cpp  netbase.h  netman.cpp  netman.h  peer.cpp  peer.h  protocol.cpp  protocol.h  seeds.h  sync.cpp  sync.h
src/node/: CMakeLists.txt  context.cpp  context.h
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h
src/primitives/: CMakeLists.txt  block.cpp  block.h  compact.cpp  compact.h  delta.cpp  delta.h  transaction.cpp  transaction.h
src/rpc/: CMakeLists.txt  blockchain.cpp  blockchain.h  debug.cpp  debug.h  http_server.cpp  http_server.h  methods.cpp  methods.h  mining.cpp  mining.h  net.cpp  net.h  rawtransaction.cpp  rawtransaction.h  register.cpp  register.h  server.cpp  server.h  training.cpp  training.h  util.cpp  util.h  wallet.cpp  wallet.h
src/script/: script.cpp  script.h  standard.cpp  standard.h
src/support/: allocators.h  cleanse.cpp  cleanse.h  event.h  lockedpool.cpp  lockedpool.h  span.h
src/test/: test_aes256.cpp  test_arith_uint256.cpp  test_backup.cpp  test_bandwidth.cpp  test_banman.cpp  test_bech32.cpp  test_block_analysis.cpp  test_block_connection.cpp  test_block_header.cpp  test_block_template_full.cpp  test_block_validation.cpp  test_blocktemplate.cpp  test_bloom.cpp  test_chain_stats.cpp  test_chaindb.cpp  test_coin_selection.cpp  test_coinselect_algorithms.cpp  test_compact_blocks.cpp  test_compact_size.cpp  test_config.cpp  test_consensus_model.cpp  test_delta.cpp  test_delta_full.cpp  test_difficulty.cpp  test_difficulty_analysis.cpp  test_ed25519.cpp  test_encryption.cpp  test_eval_engine.cpp  test_fee_estimator.cpp  test_fs.cpp  test_full_chain.cpp  test_genesis.cpp  test_growth.cpp  test_hdchain.cpp  test_http_parser.cpp  test_inference.cpp  test_init.cpp  test_integration.cpp  test_inventory_relay.cpp  test_keccak.cpp  (+42 more)
src/util/: arith_uint256.cpp  arith_uint256.h  fs.cpp  fs.h  logging.cpp  logging.h  random.cpp  random.h  serialize.cpp  serialize.h  strencodings.cpp  strencodings.h  system.cpp  system.h  threadpool.cpp  threadpool.h  time.cpp  time.h  types.h
src/wallet/: CMakeLists.txt  backup.cpp  backup.h  coinselect.cpp  coinselect.h  encryption.cpp  encryption.h  fees.cpp  fees.h  hdchain.cpp  hdchain.h  keypool.cpp  keypool.h  txbuilder.cpp  txbuilder.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h  walletutil.cpp  walletutil.h
test/: CMakeLists.txt  test_address.cpp  test_block.cpp  test_chain.cpp  test_hash.cpp  test_keys.cpp  test_mempool.cpp  test_net.cpp  test_trainer.cpp  test_validation.cpp  test_wallet.cpp
test/functional/: feature_block.py  feature_config.py  feature_difficulty.py  p2p_addr.py  (+17 more)
tools/: CMakeLists.txt  bench_layers.py  bench_resonancenet.py  flowcoin-cli.cpp  flowcoind.cpp  flowminer.cpp  flowminer.py  requirements.txt
(+114 files in other folders)
